--- a/css/style.css
+++ b/css/style.css
@@ -37,11 +37,18 @@
   justify-content: center;
 }
 
+.app-title {
+  position: absolute;
+  left: 20px;
+  top: 20px;
+  font-size: 50px;
+}
+
 /* Styles for Cards */
 .card {
   display: inline-block;
-  width: 300px;
-  height: 400px;
+  width: 200px;
+  height: 100px;
   overflow: hidden;
   border: 1.25px solid rgb(233, 233, 233);
   border-radius: 16px;
@@ -51,6 +58,7 @@
   box-shadow: 0 0 10px 5px var(--shadow);
   position: relative;
   font-size: 100%;
+  background-color: orange;
 }
 
 .card:hover {
@@ -92,16 +100,17 @@
   font-size: 110%;
 }
 
-.pet-name {
+.word {
   font-weight: bold;
   font-size: 130%;
 }
 
-h5.pet-name {
+h5.word {
   color: white;
   position: absolute;
-  left: 0;
-  bottom: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   padding: 10px;
   text-shadow: 0px 0px 4px black;
 }
