--- a/css/style.css
+++ b/css/style.css
@@ -34,26 +34,52 @@
 
 
 .navbar {
-  margin: 0 20px;
-  font-size: 120%;
-  height: 100%;
-  display: inline-flex;
-  justify-content: center;
+  background-color: #333;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
+  padding: 10px;
 }
 
+.app-title {
+  font-weight: bold;
+  font-size: 30px;
+  color: #fff;
+}
 
-.navbar a {
-  list-style-type: none;
-  margin: 0 20px;
-  font-size: 120%;
-  height: 100%;
-  display: inline-flex;
-  justify-content: center;
+.navbar-links {
+  display: none;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.navbar-toggle {
+  display: flex;
   align-items: center;
+  cursor: pointer;
+}
+
+.toggle-icon {
+  width: 25px;
+  height: 3px;
+  background-color: #fff;
+  margin-bottom: 4px;
+}
+
+.navbar-links a {
+  color: #fff;
   text-decoration: none;
+  margin-bottom: 5px;
 }
 
+.navbar-links.show {
+  display: flex;
+}
+
+.navbar-links.show a {
+  margin-left: 0;
+}
 
 /* Media query for larger screens */
 @media (min-width: 768px) {
@@ -62,18 +88,21 @@
     align-items: center;
   }
 
-  .navbar-menu {
-    display: flex;
-    margin-top: 0;
+  .navbar-toggle {
+    display: none;
   }
-
-  .navbar-menu a {
+  
+  .navbar-links {
+    display: flex;
     flex-direction: row;
-    margin-right: 10px;
+  }
+  
+  .navbar-links a {
+    margin-left: 10px;
     margin-bottom: 0;
+    margin-right: 20px;
   }
 }
-
 
 .grid {
   display: flex;
@@ -81,12 +110,12 @@
   justify-content: center;
 }
 
-.app-title {
+/* .app-title {
   position: absolute;
   left: 20px;
   top: 20px;
   font-size: 50px;
-}
+} */
 
 /* Styles for Cards */
 .card {
