--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,15 @@
   font-size: 100%;
 }
 
+.flip-card {
+  margin: 20px;  
+  width: 200px;
+  height: 150px;
+ 
+ 
+  perspective: 500px;
+}
+
 div.card-wrapper:nth-of-type(5n+1) .card {
   background-color: red;
 } 
@@ -141,21 +150,46 @@ div.card-wrapper:nth-of-type(5n+2) .card {
 } 
 
 div.card-wrapper:nth-of-type(5n+3) .card {
-  background-color: rgb(221, 221, 37)
+  background-color: rgb(235, 235, 100)
 } 
 
 div.card-wrapper:nth-of-type(5n+4) .card {
-  background-color: green;
+  background-color: rgb(75, 211, 75);
 } 
 
 div.card-wrapper:nth-of-type(5n+5) .card {
-  background-color: blue;
+  background-color: rgb(112, 112, 224);
 } 
 
+.flip-card-inner {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+    transition: transform 1s;
+  transform-style: preserve-3d;
+  transform-origin: 0px 0 0.
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY( 180deg ) ;
+  transition: transform 0.5s;
+} 
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+.flip-card-back {
+  transform: rotateY(180deg);
+  translate: -20px;
+}
+
 .card:hover {
-  --shadow: rgba(53, 53, 53, 0.103);
-  /* transform: rotateY(180deg) translate(20px, 20px);
-  background: pink; */
+  --shadow: rgba(53, 53, 53, 0.103); 
 }
 
 .card:hover .main-content {
@@ -209,6 +243,15 @@ h5.word {
   transform: translate(-50%, -50%);
   padding: 10px;
   text-shadow: 0px 0px 4px black;
+}
+
+h5.meaning {
+  color: black;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px;  
 }
 
 h5.word-view {
