--- a/css/style.css
+++ b/css/style.css
@@ -165,13 +165,15 @@ div.card-wrapper:nth-of-type(5n+5) .card {
   position: absolute;
   width: 100%;
   height: 100%;
-    transition: transform 1s;
+  transition: transform 1s;
+  -webkit-transition: transform 1s;
   transform-style: preserve-3d;
   transform-origin: 0px 0 0.
 }
 
 .flip-card:hover .flip-card-inner {
   transform: rotateY( 180deg ) ;
+  -webkit-transform: rotateY( 180deg ) ;
   transition: transform 0.5s;
 } 
 
@@ -185,7 +187,9 @@ div.card-wrapper:nth-of-type(5n+5) .card {
 
 .flip-card-back {
   transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
   translate: -20px;
+  -webkit-translate: -20px;
 }
 
 .card:hover {
