--- a/css/style.css
+++ b/css/style.css
@@ -174,9 +174,10 @@ div.card-wrapper:nth-of-type(5n+5) .card {
 }
 
 .flip-card:hover .flip-card-inner {
-  transform: rotateY( 180deg ) ;
-  -webkit-transform: rotateY( 180deg ) ;
+   transform: rotateY( -180.5deg ) ;
+  -webkit-transform: rotateY( -180.5deg ) ;
   transition: transform 0.5s;
+ 
 } 
 
 .flip-card-front, .flip-card-back {
@@ -188,20 +189,23 @@ div.card-wrapper:nth-of-type(5n+5) .card {
 }
 
 .flip-card-back {
-  transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
+  transform: rotateY(-180.5deg);
+  -webkit-transform: rotateY(-180.5deg);
   translate: -20px;
   -webkit-translate: -20px;
+  pointer-events: auto;
+
 }
 
-/* .card:hover {
+/* card:hover {
   --shadow: rgba(53, 53, 53, 0.103); 
 }
 
+
 .card:hover .main-content {
   pointer-events: initial;
-  opacity: 1;
-} */
+  opacity: 1; 
+}  */
 
 .card * {
   margin: 0;
@@ -216,10 +220,10 @@ div.card-wrapper:nth-of-type(5n+5) .card {
   position: absolute;
   top: 0;
   left: 0;
-  background-color: rgba(255, 255, 255, 0.9);
+  /* background-color: rgba(255, 255, 255, 0.9); */
   width: 100%;
   height: 100%;
-  opacity: 0;
+  /* opacity: 0; */
   /* pointer-events: none;
   transition: 0.5s all; */ 
 } 
@@ -294,6 +298,15 @@ li {
   font-weight: bold;
 }
 
+.buttons {
+  padding: 10px;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  transform:translateZ(1px);  
+  -webkit-transform:translateZ(1px);
+}
+
 .btn-container {
   text-align: right;
   padding: 10px;
@@ -314,8 +327,8 @@ li {
   --accent: grey;
   cursor: pointer;
   background: transparent;
-  border: 1.5px solid var(--accent);
-  color: var(--accent);
+  /* border: 1.5px solid var(--accent);
+  color: var(--accent); */
   border-radius: 10px;
   padding: 10px 15px;
   font-size: 90%;
@@ -325,7 +338,7 @@ li {
 }
 
 .btn:hover {
-  background: var(--accent);
+  /* background: var(--accent); */
   color: white;
 }
 
