--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@
 }
 
 .card-view {
-  background-color: orange;
+  background-color: orangered;
   display: inline-block;
   width: 200px;
   height: 300px;
@@ -252,7 +252,7 @@ h5.word {
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 10px;
-  text-shadow: 0px 0px 4px black;
+  text-shadow: 0px 0px 2px black;
 }
 
 h5.meaning {
@@ -380,5 +380,15 @@ li {
     margin-left: 10px;
     margin-bottom: 0;
     margin-right: 20px;
+  }
+
+  h5.word {
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+    text-shadow: 0px 0px 4px black;
   }
 }
