--- a/css/style.css
+++ b/css/style.css
@@ -270,7 +270,7 @@ h5.word-view {
   top: 30px;
   left: 10px;
   padding: 10px;
-  text-shadow: 0px 0px 4px black;
+  text-shadow: 0px 0px 2px black;
 }
 
 .info ul {
@@ -388,6 +388,15 @@ li {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    padding: 10px;
+    text-shadow: 0px 0px 4px black;
+  }
+
+  h5.word-view {
+    color: white;
+    position: absolute;
+    top: 30px;
+    left: 10px;
     padding: 10px;
     text-shadow: 0px 0px 4px black;
   }
