--- a/css/style.css
+++ b/css/style.css
@@ -273,6 +273,17 @@ h5.word-view {
   text-shadow: 0px 0px 2px black;
 }
 
+.alphabet {
+  text-align: center;
+  font-size: 30px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.alphabet * {
+  padding: 5px;
+}
+
 .info ul {
   padding: 10px;
   padding-top: 0px;
