--- a/css/form.css
+++ b/css/form.css
@@ -18,7 +18,7 @@ textarea {
   border: 1px solid rgb(199, 199, 199);
   border-radius: 10px;
   padding: 10px;
-  font-size: 90%;
+  font-size: 16px;
   width: 100%;
   height: 30px;
   color: rgb(53, 53, 53);
