--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,11 @@ h5.word-view {
 }
 
 .multiple {
-  background: repeating-linear-gradient(-45deg, lightgray, lightgray 5px, white 5px, white 10px);
+  /* background: repeating-linear-gradient(-45deg, lightgray, lightgray 5px, white 5px, white 10px); */
+  background-color: #f7f7f7;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.03) 2px, transparent 2px),
+    linear-gradient(90deg, rgba(0, 0, 0, 0.03) 2px, transparent 2px);
+  background-size: 28px 28px;
 }
 
 .info ul {
