--- a/css/style.css
+++ b/css/style.css
@@ -261,7 +261,8 @@ h5.meaning {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 10px;  
+  padding: 10px; 
+  width:90%;
 }
 
 h5.word-view {
