--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@
 .card-view {
   background-color: #faf4e8;
   display: inline-block;
-  width: 200px;
+  width: 300px;
   height: 300px;
   overflow: hidden;
   border: 1.25px solid rgb(233, 233, 233);
@@ -295,7 +295,7 @@ h5.word-view {
   padding: 10px;
   /* text-shadow: 0px 0px 2px black; */
   font-weight: bold;
-  font-size: 130%;
+  font-size: 160%;
 }
 
 h6.word-view {
@@ -434,6 +434,7 @@ li {
   position: absolute;
   left: 10px;
   bottom: 10px; 
+  display:flex;
 }
 
 .btn-container-settings {
@@ -488,8 +489,8 @@ li {
 .correct {
   color:white;
   background-color: var(--green);
-  padding: 10px 20px;
-  border-radius: 5px; 
+  padding: 10px 15px;
+  border-radius: 10px; 
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
@@ -501,8 +502,8 @@ li {
 .incorrect {
   color:white;
   background-color: var(--red);
-  padding: 10px 20px;
-  border-radius: 5px; 
+  padding: 10px 15px;
+  border-radius: 10px; 
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
@@ -550,7 +551,7 @@ li {
     left: 10px;
     padding: 10px;
     font-weight:bold;
-    font-size:130%
+    font-size:160%
     /* text-shadow: 0px 0px 4px black; */
   }
 
