--- a/css/style.css
+++ b/css/style.css
@@ -278,6 +278,38 @@ h5.meaning {
   width:90%;
 }
 
+h5 .confidence-level {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding-left: 10px;
+  width: 50%;
+  height: 5px;
+}
+
+/* h5.confidence-level {
+  color: black;
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px; 
+  width:90%;
+} */
+
+h5 .traffic-lights {
+  position: absolute;
+  top: 53%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding-left: 10px;
+  width: 60%;
+  height: 5px;
+  font-size:70%;
+}
+
+
 h5.mini {
   color: black;
   position: absolute;
@@ -434,7 +466,7 @@ li {
   position: absolute;
   left: 10px;
   bottom: 10px; 
-  display:flex;
+  display:
 }
 
 .btn-container-settings {
