--- a/css/style.css
+++ b/css/style.css
@@ -279,6 +279,7 @@ h5.meaning {
 }
 
 h5 .confidence-level {
+  background-color: #f1f1f1;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -299,6 +300,7 @@ h5 .confidence-level {
 } */
 
 h5 .traffic-lights {
+  background-color: #f1f1f1;
   position: absolute;
   top: 53%;
   left: 50%;
