--- a/css/style.css
+++ b/css/style.css
@@ -385,10 +385,13 @@ h6.word-view {
 
 .multiple {
   /* background: repeating-linear-gradient(-45deg, lightgray, lightgray 5px, white 5px, white 10px); */
-  background-color: #f7f7f7;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.03) 2px, transparent 2px),
+  
+  /* background-image: linear-gradient(rgba(0, 0, 0, 0.03) 2px, transparent 2px),
     linear-gradient(90deg, rgba(0, 0, 0, 0.03) 2px, transparent 2px);
-  background-size: 28px 28px;
+  background-size: 28px 28px; */
+
+  background: linear-gradient(to bottom, #59a6ff, #77dd77, #ffff99, #ffb6c1);
+  
 }
 
 .confidence-level {
