--- a/css/style.css
+++ b/css/style.css
@@ -383,6 +383,10 @@ h6.word-view {
   background-color: var(--blue);
 }
 
+.adverb {
+  background-color: hotpink;
+}
+
 .multiple {
   /* background: repeating-linear-gradient(-45deg, lightgray, lightgray 5px, white 5px, white 10px); */
   
