--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,14 @@
  
 }
 
+.mathsLinks div {
+  background-color: #1a78e4;
+}
+
+.mathsLinks div:hover {
+  background-color: #2b89f5;
+}
+
 /* Styles for Word Cards */
 .card {
   display: inline-block;
