--- a/css/style.css
+++ b/css/style.css
@@ -171,8 +171,19 @@
   font-size: 150%;
 }
 
-.maths-answer {
-  
+.pie-chart {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+}
+
+.slice {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  clip: rect(0, 100px, 200px, 0);
+  border-radius: 50%;
 }
 
 /* Styles for Word Cards */
