feat: add pie chart questions

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
   --red: red;
   --orange: orange;
   --yellow:rgb(235, 235, 100);
-  --green: rgb(75, 211, 75);
+  --green: #4bd34b;
   --blue: rgb(112, 112, 224)
 }
 
